WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263005
Release assert in CSSPrimitiveValue::create due to undefined perspective length value
https://bugs.webkit.org/show_bug.cgi?id=263005
Summary
Release assert in CSSPrimitiveValue::create due to undefined perspective leng...
Antti Koivisto
Reported
2023-10-11 01:44:14 PDT
Take care not to let Undefined through.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-10-11 01:44:43 PDT
rdar://114695740
Antti Koivisto
Comment 2
2023-10-11 01:49:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18934
EWS
Comment 3
2023-10-12 00:48:38 PDT
Committed
269244@main
(939e0cd24c09): <
https://commits.webkit.org/269244@main
> Reviewed commits have been landed. Closing PR #18934 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug