Cherry-pick 939e0cd24c09. rdar://114695740

Release assert in CSSPrimitiveValue::create due to undefined perspective length value
    https://bugs.webkit.org/show_bug.cgi?id=263005
    rdar://114695740

    Reviewed by Alan Baradlay.

    * LayoutTests/fast/css/transform-function-perspective-crash-expected.txt: Added.
    * LayoutTests/fast/css/transform-function-perspective-crash.html: Added.
    * Source/WebCore/css/TransformFunctions.cpp:
    (WebCore::transformForValue):
    (WebCore::translateForValue):

    Most paths check for Undefined but these ones didn't.

    Canonical link: https://commits.webkit.org/269244@main

Identifier: 267815.323@safari-7617-branch